--- a/style.css
+++ b/style.css
@@ -45,22 +45,38 @@
 }
 
 .failur-title {
-    color: var(--dark-01, #151414);
-    font-family: Work Sans;
+    color:#151414;
     font-size: 40px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
 }
-/* My Plan Part */
-.my-plan{
-   
-    /* display: inline-block; */
-    display: inline-flex; 
+.img{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 10px;
 }
-
-.myplan-info-container{
-    padding: 2px;
-    margin-top: 5px;
+/* footer section */
+.footer{
+    background-image: url("/images/gradient3.png");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 200px;
+    
+}
+.btn-primary1{
+    background:white;
+    color: red;
+    border-radius: 5px;
+    border: 0px;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 15px 35px;
+    width: max-content;
+}
+.footer-headline{
+    color:black;
+    padding: 50px;
+}
+.watch{
+    margin-top: 20%;
 
 }
